# casPYan

./: README.md  caspyan1f.py  pyproject.toml
.github/workflows/: pypi-release.yml  tests.yaml
src/casPYan/: __init__.py  edge.py  feedforward.py  jit.py  network.py  node.py  processor.py  util.py
src/casPYan/ende/: rate.py
tests/: test_and_or.py  test_leak.py
