[project]
name = "caspyan"
version = "0.2.1"
authors = [
  { name="Kevin Zhu", email="kzhu4@gmu.edu" },
]
description = "minimal Python implementation of Caspian SNN processor"
readme = {file = "README.md", content-type = "text/markdown"}
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/pypa/sampleproject"
Issues = "https://github.com/pypa/sampleproject/issues"

[project.license]
file = "LICENSE"

[tool.tox]
env_list = [
    'py39',
    'py313',
]

[tool.tox.gh.python]
"3.9" = ['py39',]
"3.13" = ['py313']

[tool.tox.env_run_base]
description = "Run tests under {base_python}"
change_dir="tests"
commands = [
  ["python", "test_and_or.py"],
]